[package]
name = "lox"
authors = ["Jaime Liz<admin@applogi.co>"]
description = "My own implementation of Lox from the Crafting Interpreters book by R. Nystrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
